fix(UI): fix the overflow problem of root element
When setting the width of root, it is fixed to 100vh, leading to UI
overflow. As a result, setting min-width to 100vh would solve it.

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ html {
 
 #root {
   font-size: 1rem;
-  height: 100vh;
+  min-height: 100vh;
   padding: 30px 15%;
   background-color: #878787;
 }
